--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="sender">Gönderici</a>
             <a class="nav-item nav-link" href="receiver">Alıcılar</a>
-            <a class="nav-item nav-link" href="monitoring">İzleme</a>
+            <a class="nav-item nav-link" href="monitoring">Kontrol Merkezi</a>
         </div>
     </div>
 </nav>
