--- a/views/noreceiver.handlebars
+++ b/views/noreceiver.handlebars
@@ -3,20 +3,19 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Dosya Kaydedildi</h5>
+                <h5 class="modal-title" id="exampleModalLongTitle">Kontrol Merkezi</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <ul>
-                    <li>Okunan Satır: {{ line }}</li>
-                    <li>Kaydedilen Mail Sayısı: {{ saved }}</li>
-                    <li>Hatalı Satır Sayısı: {{ err }}</li>
-                    {{#each lineNumber}}
-                        <li>{{this}}</li>
-                    {{/each}}
-                </ul>
+                 Kayıtlı alıcı yok.
+                <br>Alıcılar metin biçiminde ve mail adresleri "öğrencino@nku.edu.tr" şeklinde olmalı
+                <br>Uygun bir dosyadan örnek bir parça:
+                <br>1110606007@nku.edu.tr
+                <br>1110606006@nku.edu.tr
+                <br>1100606001@nku.edu.tr
+                <br>1110606007@nku.edu.tr
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
@@ -30,6 +29,6 @@
         $('#exampleModalLong').modal('show');
     });
     $("#exampleModalLong").on('hide.bs.modal', function(){
-        window.location.href = "/monitoring";
+        window.location.href = "/receiver";
     });
 </script>
