--- a/views/sender.handlebars
+++ b/views/sender.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm">
+        <div class="col-sm mt-5">
             <form class="form-signin" method="post" action="/sender">
                 <div class="text-center mb-4">
                     <h1 class="h3 mb-3 font-weight-normal">Gönderici Ayarları</h1>
